# packages

./: .editorconfig  .env.example  .pre-commit-config.yaml  .tool-versions  Containerfile  LICENSE  Makefile  TODO.md  pyproject.toml  tasks.py  updates.json
.github/workflows/: cleanup-ghcr-images.yaml  container.yaml  pre-commit.yaml  update.yaml
includes/: download.mk  package.mk  vendor.mk
install/: Makefile
tasks/: __init__.py  build.py  lib.py  metadata.yaml  update.py
tasks/install/: __init__.py  download.py  metadata.yaml
